@@ -3,10 +3,7 @@ package org.broadinstitute.hellbender;
 import com.google.cloud.storage.StorageException;
 import htsjdk.samtools.util.StringUtil;
 import org.broadinstitute.barclay.argparser.*;
-import org.broadinstitute.hellbender.cmdline.CommandLineProgram;
-import org.broadinstitute.hellbender.cmdline.DeprecatedToolsRegistry;
-import org.broadinstitute.hellbender.cmdline.PicardCommandLineProgramExecutor;
-import org.broadinstitute.hellbender.cmdline.StandardArgumentDefinitions;
+import org.broadinstitute.hellbender.cmdline.*;
 import org.broadinstitute.hellbender.exceptions.PicardNonZeroExitException;
 import org.broadinstitute.hellbender.exceptions.UserException;
 import org.broadinstitute.hellbender.utils.ClassUtils;
@@ -16,6 +13,7 @@ import org.broadinstitute.hellbender.utils.runtime.RuntimeUtils;
 
 import java.io.PrintStream;
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 import java.util.jar.Attributes;
 import java.util.jar.Manifest;
@@ -313,7 +311,8 @@ public class Main {
         toCheck.addAll(classList);
         final Map<String, Class<?>> simpleNameToClass = new LinkedHashMap<>();
         for (final Class<?> clazz : toCheck) {
-            if (clazz.equals(PicardCommandLineProgramExecutor.class)) {
+            if (clazz.equals(PicardCommandLineProgramExecutor.class) ||
+                    clazz.equals(CommandLineArgumentValidator.class)) {
                 continue;
             }
             // No interfaces, synthetic, primitive, local, or abstract classes.
@@ -346,12 +345,12 @@ public class Main {
             if (simpleNameToClass.containsKey(args[0])) {
                 final Class<?> clazz = simpleNameToClass.get(args[0]);
                 try {
-                    final Object commandLineProgram = clazz.newInstance();
+                    final Object commandLineProgram = clazz.getDeclaredConstructor().newInstance();
                     // wrap Picard CommandLinePrograms in a PicardCommandLineProgramExecutor
                     return commandLineProgram instanceof picard.cmdline.CommandLineProgram ?
                             new PicardCommandLineProgramExecutor((picard.cmdline.CommandLineProgram) commandLineProgram) :
                             (CommandLineProgram) commandLineProgram;
-                } catch (final InstantiationException | IllegalAccessException e) {
+                } catch (final InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                     throw new RuntimeException(e);
                 }
             }
@@ -395,8 +394,8 @@ public class Main {
                 CommandLineProgramGroup programGroup = programGroupClassToProgramGroupInstance.get(property.programGroup());
                 if (null == programGroup) {
                     try {
-                        programGroup = property.programGroup().newInstance();
-                    } catch (final InstantiationException | IllegalAccessException e) {
+                        programGroup = property.programGroup().getDeclaredConstructor().newInstance();
+                    } catch (final InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                         throw new RuntimeException(e);
                     }
                     programGroupClassToProgramGroupInstance.put(property.programGroup(), programGroup);
